# carnoise

./: .gitignore  README.md  hubconf.py  pyproject.toml  train_val.py  vggish.py  vggish_params.py
scripts/: chunk_wav.sh  fetch_youtube_video_ids.py  validate_tracks.py
